--- a/src/main/resources/static/css/welcomepage.css
+++ b/src/main/resources/static/css/welcomepage.css
@@ -1,6 +1,11 @@
+*{
+	margin:0;
+	padding: 0;
+}
+
 html, body {
 	height: 100%;
-	background-color: #4B088A;
+/* 	background-color: #4B088A; */
 }
 
 body {
@@ -14,7 +19,7 @@ body {
 	background-color: #4B088A;
 	width: 100%;
 	height: 100%;
-	/* border: solid 3px yellow;*/
+	border: solid 3px yellow;
 	min-height: 100%;
 	-webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
 	box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
@@ -98,4 +103,10 @@ body {
 	text-align: center;
 	border-radius: 28px;
 	font-family: Allura;
+}
+
+#workspace{
+	height: 100%;
+	border: 2px solid red;
+	backgound-color: blue;
 }
