Added user interface changes.

--- a/bin/templates/landingpage1.html
+++ b/bin/templates/landingpage1.html
@@ -25,29 +25,30 @@
 </head>
 
 <body>
-	<script>document.body.className += ' fade-out';</script>
-	<div id="maincontainer">
-		<div id="innercontainer">
-			<div id="header">
-				<div id="registration">
-					<h5 style="font-weight:bold;text-shadow: none;">sign in/sign up</h5>
-					<div id="box"><a href="#workspace" id="page-forward">Click to scroll down</a></div>
+<!-- 	<div class="container-fluid" style="height: 100%;"> -->
+		<div id="maincontainer">
+			<div id="innercontainer">
+				<div id="header">
+					
 				</div>
+				<!-- header ends -->
+				<p id="deardiary">Dear Diary...</p>
+			<div id = "registration">
+				<article class="glass down">
+					<h1>Pelican</h1>
+					<p>additional content...</p>
+				</article>
 			</div>
-			<!-- header ends -->
-			<p id="deardiary">Dear Diary...</p>
 		</div>
-	</div>
-	<div id="workspace"><a href="#maincontainer" id="page-forward">Click to scroll up</a></div>
-	<!-- 	</div> -->
+		</div>
+		<div id = "workspace">
+			 Dushyant
+		</div>
+<!-- 	</div> -->
 	<!-- Bootstrap core JavaScript -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="../static/js/scrolling.js"></script>
-	<script type="text/javascript" src="../static/js/toggle-on-hover.js"></script>
-	<script type="text/javascript" src="../static/js/fading.js"></script>
-
 </body>
 </html>
