--- a/bin/templates/DailyDiary.html
+++ b/bin/templates/DailyDiary.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<div class="container-fluid" style="height: 100%;">
+<!-- 	<div class="container-fluid" style="height: 100%;"> -->
 		<div id="maincontainer">
 			<div id="innercontainer">
 				<div id="header">
@@ -47,7 +47,7 @@
 										style="font-weight: bold; font-family: Allura; font-size: 18px;"><input
 										type="checkbox"> </input>Remember me</label>
 								</div>
-								<button id="submit" href="">lets write</button>
+								<a id="submit" href="workspace">lets write</a>
 							</form>
 						</section>
 
@@ -90,7 +90,10 @@
 				<p id="deardiary">Dear Diary...</p>
 			</div>
 		</div>
-	</div>
+		<div id = "workspace">
+			 Dushyant
+		</div>
+<!-- 	</div> -->
 	<!-- Bootstrap core JavaScript -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script
