--- a/src/main/resources/static/css/welcomepage.css
+++ b/src/main/resources/static/css/welcomepage.css
@@ -1,38 +1,49 @@
-*{
-	margin:0;
+* {
+	margin: 0;
 	padding: 0;
 }
 
+a {
+  color: #aaaaaa;
+  transition: all ease-in-out 200ms;
+}
+a:hover {
+  color: #333333;
+  text-decoration: none;
+}
 html, body {
 	height: 100%;
-/* 	background-color: #4B088A; */
+	/* 	background-color: #4B088A; */
 }
 
 body {
-	height: 100%; color : #fff;
-	text-align: center;
-	text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
+	height: 100%;
 	color: #fff;
+	text-align: center;
+/* 	text-shadow: 0 1px 3px rgba(0, 0, 0, .5); */
+	color: #fff;
+	overflow-y: hidden;
+	opacity: 1;
+    transition: 3s opacity;
+}
+
+body.fade-out {
+    opacity: 0;
+    transition: none;
 }
 
 #maincontainer {
-	background-color: #4B088A;
+	background-color: #ffffff;
 	width: 100%;
 	height: 100%;
-	border: solid 3px yellow;
+/* 	border: solid 3px yellow; */
 	min-height: 100%;
-	-webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
-	box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	-o-box-shadow: none;
-	box-shadow: none;
-	margin-bottom:-10px;
 }
 
 #header {
 	width: 100%;
 	height: 100px;
+/* 	border: 2px solid pink; */
 }
 
 #innercontainer {
@@ -45,25 +56,26 @@ body {
 }
 
 #deardiary {
-	margin: 200px auto;
+	margin-top: 170px;
 	font-size: 100px;
 	font-family: Allura;
-	color: #F1F743;
+	color: #4d4d4d;
 	padding: 0;
-	font-weight: bold; 
+	font-weight: bold;
+/* 	border : 2px solid black; */
 }
 
 #buttons {
 	float: left;
 	width: 70%;
 	margin-right: 0px;
-	border: 2px solid #4B088A;
+/* 	border: 2px solid #4B088A; */
 }
 
 #freespace {
 	float: left;
 	width: 30%;
-	border: 2px solid #4B088A;
+/* 	border: 2px solid #4B088A; */
 }
 
 #signinform {
@@ -105,8 +117,44 @@ body {
 	font-family: Allura;
 }
 
-#workspace{
+#workspace {
 	height: 100%;
-	border: 2px solid red;
-	backgound-color: blue;
+/* 	border: 2px solid red; */
+/* 	background-color: blue; */
+}
+
+#registration {
+	margin-left: 73em;
+	background-color: #efefef;
+	background-size: cover;
+	border: 2px solid #efefef;
+	border-radius: 10px;
+	width: 25em;
+	color: #4d4d4d;
+	cursor: pointer;
+}
+
+
+#box{
+    display: none; 
+    border: 2px solid #efefef;
+    border-radius: 10px;
+    background-color: #efefef;
+    height: 240px; 
+    overflow-y: hidden;
+}
+
+#login-form{
+	height: 200px;
+	border: 1px solid black;
+}
+
+#registration-form{
+	height: 200px;
+	border: 1px solid yellow;
+}
+
+#forgot-password-form{
+	height: 200px;
+	border: 1px solid pink;
 }
