--- a/src/main/resources/templates/DearDiaryWithForms.html
+++ b/src/main/resources/templates/DearDiaryWithForms.html
@@ -25,20 +25,52 @@
 </head>
 
 <body>
-	<script>document.body.className += ' fade-out';</script>
+	<script>
+		document.body.className += ' fade-out';
+	</script>
 	<div id="maincontainer">
 		<div id="innercontainer">
 			<div id="header">
 				<div id="registration">
-					<h5 style="font-weight:bold;text-shadow: none;">sign in/sign up</h5>
-					<div id="box"><a href="#workspace" id="page-forward">Click to scroll down</a></div>
+				
+					<div id="registration-toggler">
+						<h5 style="font-weight: bold; text-shadow: none;">sign
+							in/sign up</h5>
+					</div>
+		
+					<div id="box">
+
+						<a href="#workspace" class="page-forward">Click to scroll down</a>
+
+						<div id="login-form">
+						  <form>
+						  	<input type="email" placeholder="email"></input>
+						  	<input type="password" placeholder="password"></input>
+						  </form>
+							<a href="#registration-form" class="form-scroll">Click to
+								registration form</a>
+						</div>
+
+						<div id="registration-form">
+							<a href="#login-form" class="form-scroll">Click to login form</a>
+						</div>
+
+						<div id="forgot-password-form">
+							<a href="#registration-form" class="form-scroll">Click to
+								registration form</a> <a href="#login-form" class="form-scroll">Click
+								to login form</a>
+						</div>
+
+					</div>
 				</div>
 			</div>
 			<!-- header ends -->
 			<p id="deardiary">Dear Diary...</p>
 		</div>
 	</div>
-	<div id="workspace"><a href="#maincontainer" id="page-forward">Click to scroll up</a></div>
+	<div id="workspace">
+		<a href="#maincontainer" class="page-forward">Click to scroll up</a>
+	</div>
 	<!-- 	</div> -->
 	<!-- Bootstrap core JavaScript -->
 	<!-- Placed at the end of the document so the pages load faster -->
@@ -46,6 +78,7 @@
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../static/js/scrolling.js"></script>
+	<script type="text/javascript" src="../static/js/form-scroll.js"></script>
 	<script type="text/javascript" src="../static/js/toggle-on-hover.js"></script>
 	<script type="text/javascript" src="../static/js/fading.js"></script>
 
