Added functinalities to the user interface.

--- a/bin/templates/DailyDiary.html
+++ b/bin/templates/DailyDiary.html
@@ -25,79 +25,29 @@
 </head>
 
 <body>
-<!-- 	<div class="container-fluid" style="height: 100%;"> -->
-		<div id="maincontainer">
-			<div id="innercontainer">
-				<div id="header">
-					<article class="accordion">
-
-						<section id="signin">
-							<a href="#signin">sign in</a>
-							<form class="form-inline" role="form" id="sign-in-form">
-								<div class="form-group form-group-sm">
-									<input type="email" id="formGroupInputSmall"
-										class="form-control" placeholder="email"></input>
-								</div>
-								<div class="form-group form-group-sm">
-									<input type="password" id="formGroupInputSmall"
-										class="form-control" placeholder="password"></input>
-								</div>
-								<div class="checkbox">
-									<label
-										style="font-weight: bold; font-family: Allura; font-size: 18px;"><input
-										type="checkbox"> </input>Remember me</label>
-								</div>
-								<a id="submit" href="workspace">lets write</a>
-							</form>
-						</section>
-
-						<section id="signup">
-							<a href="#signup">sign up</a>
-							<form class="form-inline" role="form" id="sign-up-form">
-								<div class="form-group form-group-sm">
-									<input type="text" id="formGroupInputSmall"
-										class="form-control" placeholder="first name"></input>
-								</div>
-
-								<div class="form-group form-group-sm">
-									<input type="text" id="formGroupInputSmall"
-										class="form-control" placeholder="middle name"></input>
-								</div>
-
-								<div class="form-group form-group-sm">
-									<input type="text" id="formGroupInputSmall"
-										class="form-control" placeholder="last name"></input>
-								</div>
-
-								<div class="form-group form-group-sm">
-									<input type="email" id="formGroupInputSmall"
-										class="form-control" placeholder="email"></input>
-								</div>
-
-								<div class="form-group form-group-sm">
-									<input type="password" id="formGroupInputSmall"
-										class="form-control" placeholder="password"></input>
-								</div>
-								<button id="submit" href="">lets write</button>
-							</form>
-						</section>
-
-
-					</article>
-
+	<script>document.body.className += ' fade-out';</script>
+	<div id="maincontainer">
+		<div id="innercontainer">
+			<div id="header">
+				<div id="registration">
+					<h5 style="font-weight:bold;text-shadow: none;">sign in/sign up</h5>
+					<div id="box"><a href="#workspace" id="page-forward">Click to scroll down</a></div>
 				</div>
-				<!-- header ends -->
-				<p id="deardiary">Dear Diary...</p>
 			</div>
+			<!-- header ends -->
+			<p id="deardiary">Dear Diary...</p>
 		</div>
-		<div id = "workspace">
-			 Dushyant
-		</div>
-<!-- 	</div> -->
+	</div>
+	<div id="workspace"><a href="#maincontainer" id="page-forward">Click to scroll up</a></div>
+	<!-- 	</div> -->
 	<!-- Bootstrap core JavaScript -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../static/js/scrolling.js"></script>
+	<script type="text/javascript" src="../static/js/toggle-on-hover.js"></script>
+	<script type="text/javascript" src="../static/js/fading.js"></script>
+
 </body>
 </html>
