--- a/bin/static/css/welcomepage.css
+++ b/bin/static/css/welcomepage.css
@@ -1,38 +1,52 @@
-*{
-	margin:0;
+* {
+	margin: 0;
 	padding: 0;
 }
 
+a {
+  color: #aaaaaa;
+  transition: all ease-in-out 200ms;
+}
+a:hover {
+  color: #333333;
+  text-decoration: none;
+}
 html, body {
+	margin: 0;
+	padding: 0;
 	height: 100%;
-/* 	background-color: #4B088A; */
+	background-color: black;
 }
 
 body {
-	height: 100%; color : #fff;
-	text-align: center;
-	text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
+	height: 100%;
 	color: #fff;
+	text-align: center;
+/* 	text-shadow: 0 1px 3px rgba(0, 0, 0, .5); */
+	color: #fff;
+	overflow-y: hidden;
+	overflow-x: hidden;
+	opacity: 1;
+    transition: 3s opacity;
+}
+
+body.fade-out {
+    opacity: 0;
+    transition: none;
 }
 
 #maincontainer {
-	background-color: #4B088A;
+	background-color: #ffffff;
 	width: 100%;
 	height: 100%;
-	border: solid 3px yellow;
+/* 	border: solid 3px yellow; */
 	min-height: 100%;
-	-webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
-	box-shadow: inset 0 0 100px rgba(0, 0, 0, .5);
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	-o-box-shadow: none;
-	box-shadow: none;
-	margin-bottom:-10px;
 }
 
 #header {
 	width: 100%;
 	height: 100px;
+/* 	border: 2px solid pink; */
 }
 
 #innercontainer {
@@ -45,25 +59,26 @@ body {
 }
 
 #deardiary {
-	margin: 200px auto;
+	margin-top: 150px;
 	font-size: 100px;
 	font-family: Allura;
-	color: #F1F743;
+	color: #4d4d4d;
 	padding: 0;
-	font-weight: bold; 
+	font-weight: bold;
+/* 	border : 2px solid black; */
 }
 
 #buttons {
 	float: left;
 	width: 70%;
 	margin-right: 0px;
-	border: 2px solid #4B088A;
+/* 	border: 2px solid #4B088A; */
 }
 
 #freespace {
 	float: left;
 	width: 30%;
-	border: 2px solid #4B088A;
+/* 	border: 2px solid #4B088A; */
 }
 
 #signinform {
@@ -105,31 +120,117 @@ body {
 	font-family: Allura;
 }
 
-#workspace{
+#workspace {
 	height: 100%;
-	border: 2px solid red;
-	backgound-color: blue;
+/* 	border: 2px solid red; */
+/* 	background-color: blue; */
 }
 
-.glass::before {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-image: url('pelican-blurry.jpg');
-    background-size: cover;
-    content: ' ';
-    opacity: 0.4;
-}
-.glass {
-    background-color: white;
+#registration {
+	margin-left: 72em;
+/* 	background-color: #efefef; */
+	background-size: cover;
+/* 	border: 2px solid #efefef; */
+/* 	border: 2px solid red; */
+	border-radius: 10px;
+	width: 25em;
+	color: #4d4d4d;
+	cursor: pointer;
 }
 
-.glass.down {
-    transform: translateY(100%) translateY(-7rem);
+#registration-toggler{
+/* 	border: 2px solid black;	 */
 }
-.glass.down::before {
-    transform: translateY(-100%) translateY(7rem);
+
+#box{
+    display: none; 
+/*     border: 2px solid #efefef; */
+/*     border: 2px solid green; */
+    border-radius: 10px;
+/*     background-color: #efefef; */
+    height: 210px; 
+    overflow-y: hidden;
 }
-.glass.up, .glass.up::before {
-    transform: translateY(0);
+
+#login-form{
+	height: 200px;
+/* 	border: 1px solid black; */
+}
+
+#registration-form{
+	padding-top: 40px;
+/* 	margin-top:50px; */
+	height: 200px;
+/* 	border: 1px solid purples; */
+}
+
+#forgot-password-form{
+	padding-top: 0px;
+ 	margin-top:60px; 
+	height: 200px;
+/* 	border: 1px solid pink; */
+}
+
+fieldset p{
+/* 	margin-top: 5px; */
+}
+
+fieldset {
+    border:  3px solid #ccc;
+    -moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+}
+
+input {
+  border: 2px solid #ccc;
+  -moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+}
+
+input:hover{
+	border: 2px solid #4d4d4d;
+}
+
+input:focus{
+	outline:none !important;
+	border: 2px solid #4d4d4d;
+}
+
+button:focus{
+	outline:none !important;
+/* 	font-weight: bold; */
+}
+
+
+#submit-button{
+	background-color:#ffffff;
+	border: 2px solid #ccc;
+	color:#ccc;
+	text-decoration:none;
+	cursor:pointer;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+}
+
+#submit-button:hover{
+	background-color:#ffffff;
+	border: 2px solid #4d4d4d;
+	color:#4d4d4d;
+/* 	font-weight: bold; */
+/* 	text-decoration:none; */
+/* 	cursor:pointer; */
+/* 	-moz-border-radius:5px; */
+/* 	-webkit-border-radius:5px; */
+/* 	border-radius:5px; */
+}
+/* input placeholder{ */
+/* 	font-weight: bold; */
+/* } */
+/* form legend { */
+/* 	text-align:left; */
+/* 	margin-left:10px; */
+/* 	} */
 }
